--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -24,6 +24,7 @@
 body {
     overflow-x: hidden; /* Hide horizontal scrollbar */
     overflow-y: scroll; /* Add vertical scrollbar */
+    font-family: 'DM Sans';
 }
 
 .bg-pan{
@@ -97,6 +98,8 @@ body {
     font-size: 16px;
     font-weight: 400;
     font-family: 'DM Sans';
+    letter-spacing: 4px;
+    line-height: 50px;
    }
    .main-h1{
     font-size: 86px;
@@ -127,6 +130,8 @@ body {
     line-height: 28px;
     font-weight: 700;
     font-family: 'DM Sans';
+    line-height: 28px;
+    letter-spacing: -0.2px;
    }
 
    .orange-p{
@@ -165,19 +170,20 @@ body {
     font-size: 23px;
     font-weight: 700;
     font-family: 'DM Sans';
+    line-height: 28px;
 
    }
 
    .footer-para{
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 400;
-    line-height: 23px;
+    line-height: 25px;
    }
 
    .footer-li{
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 400;
-    line-height: 24px;
+    line-height: 25px;
    }
 
    .icons{
@@ -189,6 +195,8 @@ body {
    .footer-head1{
     font-size: 34px;
     font-weight: 400;
+    font-family: 'DM Sans';
+    line-height: 47px;
 
    }
 
@@ -273,11 +281,14 @@ body {
     font-size: 46px;
     font-weight: 700;
     line-height: 69px;
+    letter-spacing: -1px;
    }
 
    .orange-h4{
     font-size: 28px;
     font-weight: 700;
+    line-height: 28px;
+    letter-spacing: -0.2px;
    }
 
    .orange-p{
@@ -304,6 +315,7 @@ body {
     font-weight: 500;
     line-height: 33.8px;
     text-align: left;
+    letter-spacing:-0.1px
    }
 
    .dark-para{
