--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -231,7 +231,17 @@ body {
     font-weight: 700;
    }
 
-
+   .btn1:hover{
+    width: 160px;
+    height: 56px;
+    background-color:#FF7900;
+    border-radius: 40px;
+    border: none;
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    opacity: 0.7;
+   }
    .navbar-toggler:focus {
     text-decoration: none;
     outline: 0;
