--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -234,7 +234,7 @@ body {
    .btn1:hover{
     width: 160px;
     height: 56px;
-    background-color:#FF7900;
+    background-color:#d86701;
     border-radius: 40px;
     border: none;
     color: white;
@@ -287,7 +287,12 @@ body {
     background-color: black;
     
 }
-    
+   
+
+.main-contain img {
+   
+    padding-top: 1px;
+}
     .navbar-brand{
         color: #FF7900;
         font-size: 26px;
@@ -451,7 +456,7 @@ body {
         max-height: 100%;
         object-fit: cover;
         align-self: flex-end;
-        padding-top: 322px;
+        padding-top: 22px;
        
 }
 .main-h1 {
@@ -476,7 +481,7 @@ body {
         max-height: 100%;
         object-fit: cover;
         align-self: flex-end;
-        padding-top: 322px;
+        padding-top: 15px;
        
     }
 
