--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -112,7 +112,7 @@ body {
     font-size: 16px;
     font-weight: 400;
     font-family: 'DM Sans';
-   
+    letter-spacing: 1.2px;
     line-height: 50px;
    }
    .main-h1{
