--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -256,6 +256,10 @@ body {
   
   }
 
+  button, select {
+    text-transform: none;
+    border: none !important;
+}
 
 .main-contain img {
     height: auto;
