--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,8 @@
 body {
     overflow-x: hidden; /* Hide horizontal scrollbar */
     overflow-y: scroll; /* Add vertical scrollbar */
-    font-family: 'DM Sans';
+    font-family: 'DM Sans', sans-serif !important;
+    font-weight: 700 !important;
 }
 
 .bg-pan{
@@ -473,6 +474,8 @@ body {
     font-weight: 700;
     line-height: 30px;
     text-align: left;
+    font-family: 'DM Sans', sans-serif;
+    
    }
 
    
