--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ body {
     .nav-link{
         color: white;
         font-size: 18px;
-        font-weight: 600;
+        font-weight: 500;
     }
 
     .navbar-brand {
@@ -173,15 +173,14 @@ body {
     font-family: 'DM Sans';
    }
 
-   .main-p2{
+   .main-p2 {
     width: 427px;
     font-size: 18px;
-    font-weight: 700;
+    font-weight: 500; /* Bold */
     line-height: 30px;
-    font-family: 'DM Sans';
+    font-family: 'DM Sans', sans-serif; /* Add a fallback */
     z-index: 1;
-   
-   }
+  }
 
    .orange-h1{
     font-size: 66px;
