--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,7 @@
 body {
     overflow-x: hidden; /* Hide horizontal scrollbar */
     overflow-y: scroll; /* Add vertical scrollbar */
-    font-family: 'DM Sans', sans-serif !important;
-    font-weight: 700 !important;
+    font-family: 'DM Sans';
 }
 
 .bg-pan{
@@ -69,7 +68,7 @@ body {
     .nav-link{
         color: white;
         font-size: 18px;
-        font-weight: 500;
+        font-weight: 600;
     }
 
     .navbar-brand {
@@ -77,19 +76,19 @@ body {
     padding: 0; /* Reset padding to avoid inconsistencies */
 }
 
-.navbar-toggler {
+.navbar-toggler-icon {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 24px;
-    height: 26px;
+    height: 20px;
     position: relative;
     cursor: pointer;
     transition: transform 0.3s ease;
-    border: none;
+    background: transparent;
 }
 
-.navbar-toggler .line {
+.navbar-toggler-icon .line {
     background-color: #FF8C00;
     height: 2px;
     border-radius: 1px;
@@ -99,16 +98,16 @@ body {
 }
 
 /* Line positions for hamburger */
-.navbar-toggler .line:nth-child(1) {
+.navbar-toggler-icon .line:nth-child(1) {
     top: 0;
 }
 
-.navbar-toggler .line:nth-child(2) {
+.navbar-toggler-icon .line:nth-child(2) {
     top: 50%;
     transform: translateY(-50%);
 }
 
-.navbar-toggler .line:nth-child(3) {
+.navbar-toggler-icon .line:nth-child(3) {
     bottom: 0;
 }
 
@@ -174,14 +173,15 @@ body {
     font-family: 'DM Sans';
    }
 
-   .main-p2 {
+   .main-p2{
     width: 427px;
     font-size: 18px;
-    font-weight: 500; /* Bold */
+    font-weight: 700;
     line-height: 30px;
-    font-family: 'DM Sans', sans-serif; /* Add a fallback */
+    font-family: 'DM Sans';
     z-index: 1;
-  }
+   
+   }
 
    .orange-h1{
     font-size: 66px;
@@ -474,8 +474,6 @@ body {
     font-weight: 700;
     line-height: 30px;
     text-align: left;
-    font-family: 'DM Sans', sans-serif;
-    
    }
 
    
