--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,7 @@ body {
     line-height: 21px;
     font-weight: 400;
     font-family: 'DM Sans';
+    color: white;
    }
 
    .dark-h5{
@@ -230,6 +231,7 @@ body {
     font-weight: 400;
     line-height: 24px;
     font-family: 'DM Sans';
+    color: white;
    }
 
    .footer-head{
@@ -425,7 +427,8 @@ body {
 
     .img-fluid-invest {
         max-width: 100% !important;
-        height: auto !important;
+        height: 100% !important;
+        max-height: 50px !important;
     }
 
     body {
